Bug 66601 - [PATCH] missing of.h include in compat-*.c
Summary: [PATCH] missing of.h include in compat-*.c
Status: CLOSED CODE_FIX
Alias: None
Product: Backports project
Classification: Unclassified
Component: Backports (show other bugs)
Hardware: ARM Linux
: P1 high
Assignee: Backports Project Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-05 11:28 UTC by Richard Röjfors
Modified: 2017-02-09 16:34 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.4.x
Subsystem:
Regression: No
Bisected commit-id:


Attachments
[PATCH] compat.3.7, compat.3.8: Adds missing of.h include (834 bytes, patch)
2013-12-05 11:28 UTC, Richard Röjfors
Details | Diff

Description Richard Röjfors 2013-12-05 11:28:35 UTC
Created attachment 117591 [details]
[PATCH] compat.3.7, compat.3.8: Adds missing of.h include

This applies to 3.13-rc2

The compat-3.7.c och compat-3.8.c uses of-functions if supported by the kernel, but there is a missing include for linux/of.h

| NOTE: make -j 8 ARCH=arm KLIB_BUILD=/path/usr/src/kernel KLIB=/path/image
|   CC [M]  /path/backports-3.13-rc2-1/compat/compat-3.7.o
| /path/backports-3.13-rc2-1/compat/compat-3.7.c: In function 'of_get_child_by_name':
| /path/backports-3.13-rc2-1/compat/compat-3.7.c:274:1: error: unknown type name 'z'
| /path/backports-3.13-rc2-1/compat/compat-3.7.c:276:3: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'if'
| make[6]: *** [/path/backports-3.13-rc2-1/compat/compat-3.7.o] Error 1
| make[5]: *** [/path/backports-3.13-rc2-1/compat] Error 2
| make[4]: *** [_module_/path/backports/3.13-rc2-1-r0/backports-3.13-rc2-1] Error 2
| make[3]: *** [modules] Error 2
| make[2]: *** [modules] Error 2
| make[1]: *** [modules] Error 2
| make: *** [default] Error 2
Comment 1 Luis Chamberlain 2013-12-09 13:54:35 UTC
Thanks for the patch !

If this fixes an issue opening up a bugzilla entry seems like a rather cumbersome way to get the changes merged. Please consider sending the patch with an appropriate Singed-off-by tag if you agree to the Developer Certificate of Origin (same as the Linux kernel) and send it to backports mailing list. Will you close the bug entry yourself?
Comment 2 Richard Röjfors 2013-12-10 17:12:34 UTC
Makes sense, mailed patch to the mailinglist.
Comment 3 Hauke Mehrtens 2013-12-13 00:18:10 UTC
I already created a patch which adds the missing include, it was added in the last release, see:
https://git.kernel.org/cgit/linux/kernel/git/backports/backports.git/commit/?id=a9081420811be2a9c7386b4693c5cf1b93b3ae23

This should be fixed in backports-20131206.

Note You need to log in before you can comment on or make changes to this bug.