backports: add missing include for linux/of.h

This fixes a compile error with some config options.
Closes bug: https://bugzilla.kernel.org/show_bug.cgi?id=66601

Signed-off-by: Hauke Mehrtens <hauke@hauke-m.de>
Reported-by: Richard Röjfors <richard.rojfors@gmail.com>
Signed-off-by: Luis R. Rodriguez <mcgrof@do-not-panic.com>