backport/compat/compat-3.8.c
@@ -17,6 +17,7 @@
 #include "hid-ids.h"
 #include <linux/netdevice.h>
 #include <linux/random.h>
+#include <linux/of.h>
 
 #if (LINUX_VERSION_CODE < KERNEL_VERSION(3,7,8))
 void netdev_set_default_ethtool_ops(struct net_device *dev,
